--- a/package.json
+++ b/package.json
@@ -9,16 +9,23 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-leaflet/core": "^2.1.0",
+    "@types/d3": "^7.4.3",
+    "d3": "^7.8.5",
+    "leaflet": "^1.9.4",
+    "next": "14.0.3",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.0.3"
+    "react-leaflet": "^4.2.1",
+    "sass": "^1.69.5"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@types/leaflet": "^1.9.8",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
-    "eslint-config-next": "14.0.3"
+    "eslint-config-next": "14.0.3",
+    "typescript": "^5"
   }
 }
