--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
     "react": "^18",
     "react-dom": "^18",
     "react-leaflet": "^4.2.1",
-    "sass": "^1.69.5"
+    "react-vega": "^7.6.0",
+    "sass": "^1.69.5",
+    "vega": "^5.26.1",
+    "vega-lite": "^5.16.3"
   },
   "devDependencies": {
     "@types/leaflet": "^1.9.8",
