--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@nivo/pie": "^0.84.0",
+    "@nivo/radar": "^0.84.0",
     "@react-leaflet/core": "^2.1.0",
     "@types/d3": "^7.4.3",
     "d3": "^7.8.5",
@@ -17,6 +19,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-leaflet": "^4.2.1",
+    "react-select": "^5.8.0",
     "react-vega": "^7.6.0",
     "sass": "^1.69.5",
     "vega": "^5.26.1",
